# rtracer

./: .gitignore  Cargo.toml  README.md  aabb.rs  bvh.rs  camera.rs  color.rs  hit.rs  hitlist.rs  interval.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  rvec3.rs  sphere.rs  texture.rs  utility.rs
save/: acne.ppm  actual_perlin.ppm  anti.ppm  anti100.ppm  check.ppm  cornell.ppm  cornell_empty.ppm  cornell_straight.ppm  def_blur.ppm  final.ppm  fuzz.ppm  gamma.ppm  light.ppm  light2.ppm  marble.ppm  matte.ppm  motion.ppm  perlin3.ppm  perlin4.ppm  perlin_1.ppm  pink.ppm  smoke.ppm  turb.ppm  two_sphere.ppm
