[package]
name = "rtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "rtracer"
path = "main.rs"

# set custom dependency for windows
[target.'cfg(windows)'.dependencies]
sdl2 = { version = "=0.35.2", features = ["bundled", "static-link"] }
sdl2-sys = { version = "=0.35.2", features = ["bundled", "static-link"] }

# set custom dependency for linux
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "=0.35.2", features = ["use-pkgconfig", "static-link"] }
sdl2-sys = { version = "=0.35.2", features = ["use-pkgconfig", "static-link"] }